# nous

./: Cargo.toml  README.md  performance.md
src/: body.rs  lib.rs  main.rs  sim.rs  traits.rs
src/shapes/: intersect.rs  mod.rs  solver.rs
