[package]
name = "nous"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.21"
itertools = "0.10"

# for testing
macroquad = "0.3"

[profile.release]
debug = 1
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1
